--- a/app/src/main/res/layout/content_create_account.xml
+++ b/app/src/main/res/layout/content_create_account.xml
@@ -14,10 +14,10 @@
     tools:showIn="@layout/activity_create_account">
 
     <LinearLayout
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -27,9 +27,9 @@
             android:id="@+id/createAccountIdNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:lines="1"
+            android:hint="Id Number"
             android:inputType="number"
-            android:hint="Id Number"/>
+            android:lines="1" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -41,22 +41,22 @@
             android:id="@+id/createAccountEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:lines="1"
+            android:hint="Email Address"
             android:inputType="textEmailAddress"
-            android:hint="Email Address"/>
+            android:lines="1" />
 
     </android.support.design.widget.TextInputLayout>
 
-        <fr.ganfra.materialspinner.MaterialSpinner
-            android:id="@+id/createAccountGender"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:ms_multiline="false"
-            app:ms_hint="Gender"
-            app:ms_enableFloatingLabel="true"
-            app:ms_errorColor="@color/error_color"
-            app:ms_hintColor="@color/colorAccent"
-            app:ms_arrowSize="16dp"/>
+        <!--<fr.ganfra.materialspinner.MaterialSpinner-->
+        <!--android:id="@+id/createAccountGender"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:ms_multiline="false"-->
+        <!--app:ms_hint="Gender"-->
+        <!--app:ms_enableFloatingLabel="true"-->
+        <!--app:ms_errorColor="@color/error_color"-->
+        <!--app:ms_hintColor="@color/colorAccent"-->
+        <!--app:ms_arrowSize="16dp"/>-->
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -66,43 +66,43 @@
             android:id="@+id/createAccountPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:lines="1"
+            android:hint="Password"
             android:inputType="textPassword"
-            android:hint="Password"/>
+            android:lines="1" />
 
     </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="3dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_height="wrap_content">
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
 
             <Button
                 android:id="@+id/createAccountClear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/md_transparent"
-                android:textColor="@color/error_color"
-                android:text="Clear Fields"/>
+                android:text="Clear Fields"
+                android:textColor="@color/error_color" />
 
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="3dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_height="wrap_content">
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
 
             <Button
                 android:id="@+id/createAccountRegister"
@@ -110,10 +110,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/md_transparent"
-                android:textSize="20sp"
+                android:text="Register"
                 android:textColor="@android:color/holo_green_dark"
-                android:textStyle="bold"
-                android:text="Register"/>
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.CardView>
 
