--- a/app/src/main/res/layout/content_vote.xml
+++ b/app/src/main/res/layout/content_vote.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_vote"
+    android:id="@+id/voteSwipeRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -16,9 +16,9 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -26,14 +26,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:cardElevation="3dp"
-        app:cardUseCompatPadding="true"
-        android:layout_height="wrap_content">
+        app:cardUseCompatPadding="true">
 
         <TextView
             android:layout_width="match_parent"
@@ -43,10 +43,10 @@
     </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            app:cardUseCompatPadding="true"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:cardElevation="3dp"
-            android:layout_height="wrap_content">
+            app:cardUseCompatPadding="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -56,77 +56,77 @@
                 <fr.ganfra.materialspinner.MaterialSpinner
                     android:id="@+id/spinnerCounties"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    app:ms_hint="County"
+                    app:ms_arrowSize="16dp"
                     app:ms_enableFloatingLabel="true"
                     app:ms_errorColor="@color/error_color"
-                    app:ms_hintColor="@color/colorAccent"
-                    app:ms_arrowSize="16dp"
-                    android:layout_height="wrap_content"/>
+                    app:ms_hint="County"
+                    app:ms_hintColor="@color/colorAccent" />
 
                 <android.support.v7.widget.CardView
-                    app:cardElevation="5dp"
-android:layout_margin="5dp"
-                    app:cardUseCompatPadding="true"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    app:cardElevation="5dp"
+                    app:cardUseCompatPadding="true">
 
                     <LinearLayout
-                        android:padding="5dp"
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_height="wrap_content">
+                        android:padding="5dp">
 
                         <fr.ganfra.materialspinner.MaterialSpinner
                             android:id="@+id/spinnerPresident"
                             android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            app:ms_hint="County"
+                            app:ms_arrowSize="16dp"
                             app:ms_enableFloatingLabel="true"
                             app:ms_errorColor="@color/error_color"
-                            app:ms_hintColor="@color/colorAccent"
-                            app:ms_arrowSize="16dp"
-                            android:layout_height="wrap_content"/>
+                            app:ms_hint="County"
+                            app:ms_hintColor="@color/colorAccent" />
 
                         <fr.ganfra.materialspinner.MaterialSpinner
                             android:id="@+id/spinnerGovernor"
                             android:layout_width="match_parent"
-                            app:ms_hint="President"
+                            android:layout_height="wrap_content"
+                            app:ms_arrowSize="16dp"
                             app:ms_enableFloatingLabel="true"
                             app:ms_errorColor="@color/error_color"
-                            app:ms_hintColor="@color/colorAccent"
-                            app:ms_arrowSize="16dp"
-                            android:layout_height="wrap_content"/>
+                            app:ms_hint="President"
+                            app:ms_hintColor="@color/colorAccent" />
 
                         <fr.ganfra.materialspinner.MaterialSpinner
                             android:id="@+id/spinnerSenator"
                             android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:ms_arrowSize="16dp"
                             app:ms_enableFloatingLabel="true"
                             app:ms_errorColor="@color/error_color"
-                            app:ms_hintColor="@color/colorAccent"
-                            app:ms_arrowSize="16dp"
                             app:ms_hint="Governor"
-                            android:layout_height="wrap_content"/>
+                            app:ms_hintColor="@color/colorAccent" />
 
                         <fr.ganfra.materialspinner.MaterialSpinner
                             android:id="@+id/spinnerWomenRep"
                             android:layout_width="match_parent"
-                            app:ms_hint="Senator"
+                            android:layout_height="wrap_content"
+                            app:ms_arrowSize="16dp"
                             app:ms_enableFloatingLabel="true"
                             app:ms_errorColor="@color/error_color"
-                            app:ms_hintColor="@color/colorAccent"
-                            app:ms_arrowSize="16dp"
-                            android:layout_height="wrap_content"/>
+                            app:ms_hint="Senator"
+                            app:ms_hintColor="@color/colorAccent" />
 
                         <fr.ganfra.materialspinner.MaterialSpinner
                             android:id="@+id/spinnerMP"
                             android:layout_width="match_parent"
-                            app:ms_hint="Woman Representative"
+                            android:layout_height="wrap_content"
+                            app:ms_arrowSize="16dp"
                             app:ms_enableFloatingLabel="true"
                             app:ms_errorColor="@color/error_color"
-                            app:ms_hintColor="@color/colorAccent"
-                            app:ms_arrowSize="16dp"
-                            android:layout_height="wrap_content"/>
+                            app:ms_hint="Woman Representative"
+                            app:ms_hintColor="@color/colorAccent" />
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
@@ -142,39 +142,39 @@ android:layout_margin="5dp"
 
                 <android.support.v7.widget.CardView
                     android:layout_width="0dp"
-                    app:cardUseCompatPadding="true"
-                    app:cardElevation="3dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_height="wrap_content">
+                    app:cardElevation="3dp"
+                    app:cardUseCompatPadding="true">
 
                 <Button
                     android:id="@+id/voteClearButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/md_transparent"
-                    android:textColor="@color/error_color"
-                    android:text="Cancel"/>
+                    android:text="Cancel"
+                    android:textColor="@color/error_color" />
 
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
                     android:layout_width="0dp"
-                    app:cardUseCompatPadding="true"
-                    app:cardElevation="3dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_height="wrap_content">
+                    app:cardElevation="3dp"
+                    app:cardUseCompatPadding="true">
 
                 <Button
-                    android:enabled="false"
                     android:id="@+id/buttonSubmitVote"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/md_transparent"
-                    android:textSize="20sp"
+                    android:enabled="false"
+                    android:text="Vote"
                     android:textColor="@android:color/holo_green_dark"
-                    android:textStyle="bold"
-                    android:text="Vote"/>
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 </android.support.v7.widget.CardView>
 
@@ -186,4 +186,4 @@ android:layout_margin="5dp"
 
     </ScrollView>
 
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
